fixed the top pictures distance from the header. There was too much room

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -58,7 +58,7 @@ nav a {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding-top: 69px;
+	padding-top: 60px;
 	opacity: 0.9;
 	width: 1200px;
 	margin: auto;
